# WildGuard

./: .env.example  .gitignore  CHANGELOG.md  CNAME  PROJECT.md  README.md  STORYTELLING.md  Untitled  llm_judge_reliability.md  pyproject.toml  requirements.txt  v4.md
.claude/: settings.local.json
app/: __init__.py  streamlit_app.py
data/: darkbench_missing_prompts.jsonl
docs/: CNAME  PRESENTATION.md  darkpatternsmonitor_paper.tex  index.html
docs/paper/: README.md  main.tex  references.bib
docs/paper/sections/: code_availability.tex  conclusion.tex  discussion.tex  ethical.tex  implementation.tex  introduction.tex  limitations.tex  methodology.tex  related_work.tex  results.tex  system_architecture.tex
labeled/: eval.jsonl  eval_full.jsonl  train.jsonl  train_full.jsonl
models/: classifier_full
models/classifier_v1/: logistic_classifier.joblib
models/classifier_v2/transformer/checkpoint-65/: config.json  rng_state.pth  scheduler.pt  trainer_state.json
notebooks/: 01_exploration.ipynb  02_gap_and_reliability.ipynb
outputs/v1/: gap_report.json  prevalence.json  reliability_report.json
outputs/v2/: gap_report_full_v2.json  prevalence_full_v2.json  prevalence_v2.json  reliability_report_full_v2.json  reliability_report_v2.json  training_results.json  training_results_mpnet_backup.json
paper/: wildguard_paper.tex
scripts/: package_release.py
src/: __init__.py  analytics.py  analytics_v3.py  analytics_v4.py  config.py  gap_report.py  infer_wildchat.py  ingest_wildchat.py  judge_label.py  prepare_training_data.py  prepare_v5_data.py  prepare_v5b_data.py  reliability_report.py  run_darkbench.py  sample_flagged.py  sample_for_labeling.py  topic_analysis.py  train_classifier.py  train_v3.py  utils.py
tests/: __init__.py  test_config.py  test_utils.py
